tests/neg/i9298.scala
object Foo {
  val foo = Nil
  object foo // error
  foo(foo*) // error
}
